SDC-16861. Upgrade Azure IOT SDK
Change-Id: If5fb665b9dc219ff2ccf4ea5cd2542b418017f42
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40857
Reviewed-by: Alex Sanchez Cabana <alex.sanchez@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>

--- a/azure-lib/src/main/resources/data-collector-classpath-whitelist.properties
+++ b/azure-lib/src/main/resources/data-collector-classpath-whitelist.properties
@@ -13,5 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-jackson=1.9.2,1.9.13,2.8.6,2.8.9,2.10.3
+jackson=1.9.2,1.9.13,2.8.6,2.8.9,2.10.3,2.10.1
 hadoop=1.0.0,3.3.0
+okhttp=2.7.5,3.2.0
