SDC-16951. Add configurable timeout options to Salesforce stages
Change-Id: Ia1d553a62079d7752bb855aec75895a6ef23dd5a
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40978
Reviewed-by: Loretta Chen <loretta@streamsets.com>
Reviewed-by: Alex Sanchez Cabana <alex.sanchez@streamsets.com>

--- a/salesforce-connection/src/main/resources/upgrader/SalesforceConnection.yaml
+++ b/salesforce-connection/src/main/resources/upgrader/SalesforceConnection.yaml
@@ -22,3 +22,11 @@ upgrades:
       - setConfig:
           name: authType
           value: "BASIC"
+  - toVersion: 3
+    actions:
+      - setConfig:
+          name: subscribeTimeout
+          value: 10
+      - setConfig:
+          name: handshakeTimeout
+          value: 10
