SDC-16962. Add fields to handle HTTP Client Processor passthrough
Change-Id: I5628705a7b87915cd844f080862e1a2fb30a8a01
Reviewed-on: https://review.streamsets.net/c/datacollector/+/41019
Reviewed-by: Toni Martinez <toni@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>

--- a/basic-lib/src/main/resources/upgrader/HttpDProcessor.yaml
+++ b/basic-lib/src/main/resources/upgrader/HttpDProcessor.yaml
@@ -83,3 +83,16 @@ upgrades:
       - setConfig:
           name: conf.dataFormatConfig.csvUnivocityCommentMarker
           value: ${"#"}
+  - toVersion: 18
+    actions:
+      - setConfig:
+          name: conf.responseTimeoutActionConfig.passRecord
+          value: false
+      - iterateListConfig:
+          name: conf.responseStatusActionConfigs
+          actions:
+            - setConfig:
+                name: passRecord
+                value: false
+
+
