SDC-16980. Fix some upgraders that do not check existing list before upgrading.
Change-Id: I62810a6f761ff9c9e4a23792b5187cad5604d87f
Reviewed-on: https://review.streamsets.net/c/datacollector/+/41139
Reviewed-by: Alex Sanchez Cabana <alex.sanchez@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>

--- a/basic-lib/src/main/resources/upgrader/FieldTypeConverterDProcessor.yaml
+++ b/basic-lib/src/main/resources/upgrader/FieldTypeConverterDProcessor.yaml
@@ -19,12 +19,20 @@ upgraderVersion: 1
 upgrades:
   - toVersion: 3
     actions:
+      - setConfig:
+          lookForName: fieldTypeConverterConfigs
+          elseName: fieldTypeConverterConfigs
+          elseValue: []
       - iterateListConfig:
           name: fieldTypeConverterConfigs
           actions:
             - setConfig:
                 name: inputFieldEmpty
                 value: ERROR
+      - setConfig:
+          lookForName: wholeTypeConverterConfigs
+          elseName: wholeTypeConverterConfigs
+          elseValue: []
       - iterateListConfig:
           name: wholeTypeConverterConfigs
           actions:
