SDC-16836. Move "overrideConfigurations" to next version in Kafka upgraders
Change-Id: I991796d5b2085a996ada11f53bb532004f761d33
Reviewed-on: https://review.streamsets.net/c/datacollector/+/41167
Reviewed-by: Joaquín Bo Díaz <joaquin.bo.diaz@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>

--- a/kafka_target-protolib/src/main/resources/upgrader/KafkaDTarget.yaml
+++ b/kafka_target-protolib/src/main/resources/upgrader/KafkaDTarget.yaml
@@ -188,6 +188,8 @@ upgrades:
           value: "PLAIN"
           elseName: conf.connectionConfig.connection.securityConfig.saslMechanism
           elseValue: "GSSAPI"
+  - toVersion: 11
+    actions:
       - setConfig:
           name: conf.overrideConfigurations
           value: false
