--- a/maprstreams-source-protolib/src/main/resources/upgrader/MapRStreamsDSource.yaml
+++ b/maprstreams-source-protolib/src/main/resources/upgrader/MapRStreamsDSource.yaml
@@ -49,6 +49,8 @@ upgrades:
       - setConfig:
           name: maprstreamsSourceConfigBean.dataFormatConfig.csvUnivocityCommentMarker
           value: ${"#"}
+  - toVersion: 7
+    actions:
       - setConfig:
           name: maprstreamsSourceConfigBean.overrideConfigurations
           value: false
