SDC-10527. Oracle CDC SQL Query parsing has issues with ROWID for UPDATE.
Change-Id: I1da4ecc27b7fc657c3bb261f3e6d1de980b454a7
Reviewed-on: https://review.streamsets.net/c/datacollector/+/41237
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Sebastian Sanchez <sebas@streamsets.com>

--- a/jdbc-protolib/src/main/resources/upgrader/OracleCDCDSource.yaml
+++ b/jdbc-protolib/src/main/resources/upgrader/OracleCDCDSource.yaml
@@ -42,3 +42,9 @@ upgrades:
       - renameConfig:
           oldNamePattern: hikariConf.password
           newNamePattern: hikariConf.connection.password
+  - toVersion: 15
+    actions:
+      - setConfig:
+            name: oracleCDCConfigBean.putPseudocolumnsInHeader
+            value: false
+
